--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -5,7 +5,6 @@
   font-family: 'Roboto', sans-serif;
 }
 
-
 *,*:before,*:after{
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
@@ -45,4 +44,10 @@ img{vertical-align: top;}
   max-width: 1300px;
   padding: 0px 15px;
   margin: 0 auto;
+}
+
+.wrapper{
+  overflow: hidden;
+  min-height: 100%;
+  width: 100%;
 }
