--- a/src/app/user-filter/user-filter.component.scss
+++ b/src/app/user-filter/user-filter.component.scss
@@ -6,9 +6,13 @@
     justify-content: flex-start;
   }
   &__item{
-    margin-right: 50px;
+    margin-right: 25px;
+    padding-right: 25px;
+    border-right: 2px solid black;
     &:last-child{
       margin-right: 0;
+      border-right: 0px;
+      padding-right: 0;
     }
   }
   &__title{}
@@ -17,12 +21,48 @@
     text-transform: uppercase;
     margin-bottom: 15px;
   }
-  &__values{}
+  &__values{
+  }
   &__value{
+    display: inline-block;
     font-weight: 300;
     margin-bottom: 10px;
+    margin-right: 20px;
     &:last-child{
-      margin-bottom: 0;
+      margin-right: 0px;
+    }
+  }
+  @media(max-width: 1162px){
+    &__item{
+      padding-right: 5px;
+      margin-right: 5px;
+    }
+    &__value{
+      font-size: 14px;
+      margin-right: 13px;
+    }
+  }
+  @media(max-width:900px){
+    &__item{
+      padding-right: 15px;
+      margin-right: 15px;
+    }
+    &__value{
+      margin-right: 0;
+      display: block;
+    }
+  }
+  @media(max-width:400px){
+    &__inner{
+      flex-direction: column;
+    }
+    &__item{
+      margin-right: 0;
+      padding-right: 0;
+      border-right: none;
+      border-bottom: 2px solid black;
+      margin-bottom: 5px;
+      padding-bottom: 5px;
     }
   }
 }
