--- a/src/app/user-list/user-list.component.html
+++ b/src/app/user-list/user-list.component.html
@@ -15,7 +15,8 @@
         <td>{{ user.age }}</td>
         <td>{{ user.gender }}</td>
         <td>{{ user.department }}</td>
-        <td>{{ user.address.city}},<br> {{user.address.street}}</td>
+        <td>{{ user.address.city}},<br>
+          <hr> {{user.address.street}}</td>
       </tr>
     </table>
   </div>
