--- a/src/app/user-list/user-list.component.scss
+++ b/src/app/user-list/user-list.component.scss
@@ -21,6 +21,7 @@
     }
     td {
       background: #D8E6F3;
+      padding: 5px 0;
     }
     th:first-child, td:first-child {
       text-align: center;
@@ -77,6 +78,14 @@
     }
     &__sortup{
 
+    }
+    td{
+      padding: 2px 0;
+    }
+  }
+  @media(max-width:384px){
+    &__table{
+      font-size: 12px;
     }
   }
 }
